--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -3,12 +3,12 @@ name: Generate PDF
 on: push
 
 jobs:
-  convert_via_pandoc:
+  create_book:
     runs-on: ubuntu-18.04
     steps:
       - uses: docker://pandoc/core:2.9
         with:
-          args: "--pdf-engine xelatex --template ../common/pdf-template.tex --listings ./en/go.pdf -o the-little-go-book.pdf"
+          args: "--pdf-engine xelatex --template ../common/pdf-template.tex --listings ./en/go.md -o the-little-go-book.pdf"
       - uses: actions/upload-artifact@v2
         with:
           name: the-little-go-book
