--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - uses: docker://pandoc/core:2.9
+      - uses: docker://pandoc/latex:2.9
         with:
           args: "--pdf-engine xelatex --template ./common/pdf-template.tex --listings ./en/go.md -o the-little-go-book.pdf"
       
