Add release actions

--- a/.github/workflows/epub.yml
+++ b/.github/workflows/epub.yml
@@ -1,6 +1,9 @@
 name: Generate ePub
 
-on: push
+on:
+  push:
+    tags:
+    - 'v*'
 
 jobs:
   create_book:
@@ -10,9 +13,20 @@ jobs:
       
       - uses: docker://pandoc/latex:2.9
         with:
-          args: "--epub-cover-image ./en/title.png ./en/title.txt ./en/go.md -o ./en/go.epub"
+          args: "--epub-cover-image ./en/title.png ./en/title.txt ./en/go.md -o the-little-go-book.epub"
       
       - uses: actions/upload-artifact@v2
         with:
           name: the-little-go-book
           path: the-little-go-book.epub
+
+      - name: Upload ePub As Release Asset
+        id: upload-epub-as-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./the-little-go-book.epub
+          asset_name: the-little-go-book.epub
+          asset_content_type: application/epub+zip
