--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -20,6 +20,17 @@ jobs:
           name: the-little-go-book
           path: the-little-go-book.pdf
 
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
       - name: Upload PDF As Release Asset
         id: upload-pdf-as-release-asset 
         uses: actions/upload-release-asset@v1
